--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,8 +12,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:title="@string/app_name"
-            android:background="@color/switch_thumb_normal_material_dark" />
+            android:background="@color/switch_thumb_normal_material_dark"
+            android:title="@string/app_name" />
 
         <TextView
             android:id="@+id/tag_textView"
@@ -21,30 +21,23 @@
             android:layout_height="wrap_content"
             android:gravity="center" />
 
-        <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/SwipeRefreshLayout"
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context="com.example.admin.gallerytest.MainActivityFragment">
+            android:scrollbars="vertical" />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scrollbars="vertical" />
-
-        </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/expand_LinearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:visibility="invisible"
         android:background="#000000"
         android:gravity="center"
-        android:id="@+id/expand_LinearLayout">
+        android:orientation="vertical"
+        android:visibility="invisible">
 
         <ImageView
             android:id="@+id/imageView"
@@ -53,9 +46,9 @@
             android:background="#000000" />
 
         <TextView
+            android:id="@+id/caption_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#ffffff"
-            android:id="@+id/caption_textView" />
+            android:textColor="#ffffff" />
     </LinearLayout>
 </FrameLayout>
